feat: SkCheese support pt 1.5 (waiting on another commit)